Updated fourth section, the call to action section. Added a flex container and centered the content within the blue div using justify-content and align-items. Fixed an issue with the second section regarding similar styling.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,9 @@ button {
 }
 .lowerButton{
     border: 2px solid #E5E7EB;
-    width: 135px;
+    line-height: 5px;
+    margin-top: 5px;
+    width: 160px;
     height: 25px;
 }
 /* flexbox */
@@ -146,7 +148,8 @@ button {
   }
  .additionalContainerSecondSection{
     display: flex;
-    padding-left: 375px;
+    align-items: center;
+    justify-content: center;
     padding-top: 10px;
     gap: 50px;
   }
@@ -175,4 +178,28 @@ button {
     font-weight: 700;
     display: flex;
     justify-content: flex-end;
+  }
+
+  /* fourth section */
+
+  .containerFourthSection{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .signup{
+    border-radius: 10px;
+    border: 2px solid #3882F6;
+    line-height: 5px;
+    margin: 100px;
+    height: 170px;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 120px;
+  }
+  .secondaryText p{
+    font-size: 24px;
+    font-weight: 800;
   }
